# CEG-WM

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  _cleanup_hf_embedder.py  _cleanup_lf_coder.py  _fix_orchestrator.py  _fix_v1_tests.py  _rewrite_tests.py  _rewrite_tests2.py  audit_report.json  audit_result.json  audit_result_strict.json  audit_results  check_p1p2_status.py  diagnose_p1p2_config.py  extract_audit_summary.py  final_test_result.txt  find_fail_strict.py  full_test_result.txt  list_digests.py  pyproject.toml  pytest_output.txt  test_out.txt  test_output.txt  test_result_final.txt  test_result_full.txt  test_result_full2.txt  test_result_full3.txt  test_result_new.txt
.codex/: config.toml
archive/: README_legacy_mainline_retired.md
configs/: attack_protocol.yaml  colab_embed_fallback_default.yaml  colab_embed_fallback_paper_proof.yaml  colab_smoke_test.yaml  default.yaml  detect_config.yaml  example_lf_hf_config.yaml  frozen_contracts.yaml  injection_scope_manifest.yaml  model_sd3.yaml  p2_workflow_fallback.yaml  paper_faithful_runtime.yaml  paper_faithfulness_spec.yaml  paper_full_cuda.yaml  paper_full_cuda_mini_real_validation.yaml  paper_proof.yaml  policy_path_semantics.yaml  records_schema_extensions.yaml  runtime_whitelist.yaml  smoke_cpu.yaml
doc/: Content 链四层完成度模型.md  Content 链实验规范锁定.md  Geometry 链四层完成度模型.md  Method.md  S1_S7_修复方案.md  experiment_matrix_override_fix.md  下一步工作1.md  修复总结-20260227.md  实现差距.md  实现差距审查.md  工作步骤.md  指令.md  方法.md  方法机制.md  某次审计.md  流程编排.md  真实方法安全注入流程.md  第3阶段交付总结-Runtime协议覆盖率审计.md  项目构建难点与解决方案答辩稿.md  项目风险审计_v1.0.md
(+871 files in other folders)
